2005-07-29 Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-filter.c, et_al: Made filters work again.
	* rsvg-private.c: made a new function for render thingies to implement,
	something that will get a node as a pixbuf.
	* rsvg-styles.c: made overflow into a propper CSS property

2005-07-21 Caleb Moore <c.moore@student.unsw.edu.au>

	* Makefile.am, configure.in, rsvg.c, rsvg-base.c: further split the library into librsvg-2.so, librsvg-2-base.so and librsvg-2-libart.so. Make libart an optional dependancy.

2005-07-20  Dom Lachowicz <cinamod@hotmail.com>

	* */Makefile.am: Update things so that we build a librsvg-2.so and 
	librsvg-2-libart.so
	
2005-07-21  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-art-mask.c: fixed clip paths having their transform applied twice
	
2005-07-20  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-marker.c: made markers work again. Took me 3 minutes at most... it's funny how some things that are procratinated about turn out to be easy.

2005-07-20  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg.c: created a text node that isn't being used yet but is proving very useful for type checking
	* rsvg-structure.c: created a default node initialiser function and destructor function, now everything has a style and children whether it needs to or not, adding to the memory footprint but increasing stability
	* rsvg-filter.c: makeing objects safe for when their children are of the wrong type

2005-07-11  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-structure.c: Bug 309885

2005-06-30  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-image.c: Bug 309220, from joss@debian.org
	* rsvg-file-util.c: Bug 309233 from joss@debian.org
	* test-rsvg.c: Ditto
	* rsvg.c: Bug 309234 from joss@debian.org
	* rsvg-structure.c: Bug 308472, from Behdad
	* rsvg-text.c: Bug 303086
	
2005-06-24  Dom Lachowicz <cinamod@hotmail.com>

	* *.c: Some sanity checking all over the place; fixes bug #308810
	
2005-06-23  Caleb Moore <c.moore@student.unsw.edu.au>
